--- a/css/main.css
+++ b/css/main.css
@@ -142,18 +142,44 @@ header a:hover {
 
 #boxes {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #boxes .box {
     float:left;
     text-align: center;
-    width: 30%;
+    width: 28%;
+    height: 400px;
+    margin: 10px 10px 10px 10px;
     padding: 10px;
+    outline: 1px solid #32424a;
+    border: 5px solid transparent;    
+}
+
+#boxes .box:hover{
+    outline: 0px solid transparent;
+    padding: 10px;
+    border: 5px solid #e8491d;
+}
+
+#boxes .box:hover h3{
+    color: #e8491d;
 }
 
 #boxes .box img{
-    width: 180px;
-    height: 150px;
+    width: 80%;
+    height: 40%;
+}
+
+#boxes a{
+    color: #000000;
+    text-decoration: none;
+}
+
+#boxes .box p{
+    text-align: justify;
+    color: black;
+    overflow: hidden;
 }
 
 /**
@@ -166,7 +192,7 @@ footer {
     margin-top: 20px;
     color: #ffffff;
     background-color: #e8491d;
-    text-align: center;
+    text-align: center;    
 }
 
 
